--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <main>
     <section id="now">
-      <h2>Now</h2>
+      <h2>now</h2>
       
       <article>
         <time>2025-12-31</time>
@@ -52,12 +52,12 @@
     </section>
 
     <section id="about">
-      <h2>About</h2>
+      <h2>about</h2>
       <p>I'm Joseph, a primary school teacher in New Zealand originally from America.</p>
     </section>
 
     <section id="uses">
-      <h2>Uses</h2>
+      <h2>uses</h2>
       <ul>
         <li>Obsidian for notes</li>
       </ul>
