--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Joseph's Page</title>
-  <link rel="stylesheet" href="https://unpkg.com/sakura.css/css/sakura-dark.css">
+  <link rel="stylesheet" href="https://neat.joeldare.com/neat.css">
   <style>
     /* Hide all sections by default */
     section { display: none; }
