--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
   /* Force dark mode */
     :root {
       color-scheme: dark;
-    }
-    
-    /* Remove top border */
-    body {
-      border-top: none;
+      border-top: none !important;
     }
     
     /* Hide all sections by default */
