--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
   <main>
     <section id="now">
-      <h2>Now</h2>
+      <h2>now</h2>
       
       <article id="2025-12-31-first-post">
         <time>
@@ -133,20 +133,52 @@
     </section>
 
     <section id="about">
-      <h2>About</h2>
-      <p>I'm Joseph, a primary school teacher in New Zealand originally from America.</p>
+      <h2>about</h2>
+      <p>I like to make things, but I don't usually share them so publicly. Hopefully I can learn to work on things out in the open.</p>
+      <p>I like dates written year-month-day with leading zeroes. Weeks start on Sunday. My spelling is all mixed up since I left the US, but I still mostly prefer American spelling when I notice it. I like em-dashes and I'm sad that I feel uncomfortable using them now because people think I'm using chatGPT to write.</p>
+      <p>This site is a home and a place for me to sort out my thoughts. It's my place online to relax and reflect on myself as a <a href="https://gravityfalls.fandom.com/wiki/We%27ll_Meet_Again">meat computer</a>. It's experimental and therapeutic, so don't take anything on here too seriously.</p>
+      <p>There's no monetization, advertisements, trackers, paywalls, or public comments. But, if you've got anything to add to my brain, feel free to <a href="mailto:jsmolinelli@proton.me">contact me</a>.</p>
+      <p>Just take off your shoes first before coming in.</p>
     </section>
 
     <section id="uses">
-      <h2>Uses</h2>
+      <h2>uses</h2>
       <ul>
-        <li>Obsidian for notes</li>
+        <p>I have always wanted everything as minimal as possible to be able to move it to wherever I need to be. I've been using the same rolling duffel bag, carry-on, backpack combo to move to university, to Korea, and to New Zealand.</p>
+        <p>I love that duffel bag.</p>
+        <h2>hardware</h2>
+        <ul>
+        <li>Lenovo T14 gen 3
+        <ul>
+        <li>used business laptops are the way to go</li>
+        </ul>
+        </li>
+        <li>m4 macbook air (work laptop, so stays at work, liquid glass can go die...)</li>
+        <li>11" ipad pro 2018 + apple pencil</li>
+        <li>Pixel 9 Pro
+        <ul>
+        <li><a href="https://niagaralauncher.com/">niagara launcher</a></li>
+        </ul>
+        </li>
+        <li>Samsung Buds, gen 1</li>
+        </ul>
+        <h2>software</h2>
+        <ul>
+        <li><strong><a href="https://fedoraproject.org/">fedora 43</a></strong> - KDE</li>
+        <li><strong><a href="https://obsidian.md/">obsidian</a></strong> - long notes</li>
+        <li><strong><a href="https://write.sonnet.io/">enso</a></strong> - reflections</li>
+        <li><strong>google keep</strong> - fleeting notes</li>
+        <li><strong>kate</strong> - coding</li>
+        <li><strong><a href="https://raindrop.io/">raindrop.io</a></strong> - saving and bookmarking things (not great about keeping this clean)</li>
+        <li><strong>procreate</strong> - drawing</li>
+        <li><strong>firefox, brave</strong> - browsers in order of preference</li>
+        </ul>
       </ul>
     </section>
   </main>
 
   <footer>
-    <p>Joseph • <a href="mailto:jsmolinelli@proton.me">jsmolinelli@proton.me</a></p>
+    <p><a href="mailto:jsmolinelli@proton.me">jsmolinelli@proton.me</a> • <a href="https://hardcover.app/@greatsandwiches">hardcover</a> • <a href="https://github.com/jomolin">github</a>a</p>
   </footer>
 </body>
 </html>
