--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
   </main>
 
   <footer>
-    <p><a href="mailto:jsmolinelli@proton.me">jsmolinelli@proton.me</a> • <a href="https://hardcover.app/@greatsandwiches">hardcover</a> • <a href="https://github.com/jomolin">github</a>a</p>
+    <p><a href="mailto:jsmolinelli@proton.me">jsmolinelli@proton.me</a> • <a href="https://hardcover.app/@greatsandwiches">hardcover</a> • <a href="https://github.com/jomolin">github</a></p>
   </footer>
 </body>
 </html>
