--- a/index.html
+++ b/index.html
@@ -163,14 +163,14 @@
       </ul>
       <h2>software</h2>
       <ul>
-      <li><strong><a href="https://fedoraproject.org/">fedora 43</a></strong> - KDE</li>
-      <li><strong><a href="https://obsidian.md/">obsidian</a></strong> - long notes</li>
-      <li><strong><a href="https://write.sonnet.io/">enso</a></strong> - reflections</li>
-      <li><strong>google keep</strong> - fleeting notes</li>
-      <li><strong>kate</strong> - coding</li>
-      <li><strong><a href="https://raindrop.io/">raindrop.io</a></strong> - saving and bookmarking things (not great about keeping this clean)</li>
-      <li><strong>procreate</strong> - drawing</li>
-      <li><strong>firefox, brave</strong> - browsers in order of preference</li>
+      <li><a href="https://fedoraproject.org/">fedora 43</a> - KDE</li>
+      <li><a href="https://obsidian.md/">obsidian</a> - long notes</li>
+      <li><a href="https://write.sonnet.io/">enso</a> - reflections</li>
+      <li>google keep - fleeting notes</li>
+      <li>kate - coding</li>
+      <li><a href="https://raindrop.io/">raindrop.io</a> - saving and bookmarking things (not great about keeping this clean)</li>
+      <li>procreate - drawing</li>
+      <li>firefox, brave - browsers in order of preference</li>
       </ul>
     </section>
   </main>
