--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       --bg-light: #333;
       --text: #eee;
       --text-bright: #fefefe;
-      --link: #8b5cf6;
+      --link: royalblue;
       line-height: 1.5em;
       font-family: system-ui, sans-serif;
       font-size: 16px;
@@ -140,7 +140,7 @@
 
       <h2>recent posts</h2>
       <ul>
-        <li>2025-12-31 <a href="#blog#2025-12-31-first-post">My First Post</a></li>
+        <li>2025-12-31 <a href="#2025-12-31-first-post">My First Post</a></li>
       </ul>
     </section>
 
