changing to mvp.css

--- a/index.html
+++ b/index.html
@@ -4,72 +4,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Joseph's Page</title>
+  <link rel="stylesheet" href="https://unpkg.com/mvp.css">
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
     :root {
       color-scheme: dark;
-      --bg: #222;
-      --bg-light: #333;
-      --text: #eee;
-      --text-bright: #fefefe;
-      --link: royalblue;
-      line-height: 1.5em;
-      font-family: system-ui, sans-serif;
-      font-size: 16px;
-      color: var(--text);
     }
-
-    h1 {
-      line-height: 1em;
-    }
-
-    pre {
-      background-color: var(--bg-light);
-      margin: 0.5em 0;
-      padding: 0.5em;
-      overflow: auto;
-    }
-
-    code {
-      background-color: var(--bg-light);
-    }
-
-    blockquote {
-      border-left: 0.25rem solid var(--text);
-      padding-left: 1rem;
-    }
-
-    body {
-      background-color: var(--bg);
-      margin: 0;
-      max-width: 800px;
-      padding: 0 20px 20px 20px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-    a {
-      outline: none;
-      color: var(--text);
-    }
-
-    a:hover {
-      text-decoration-color: var(--link);
-    }
-
-    img {
-      max-width: 100%;
-      height: auto;
-    }
-
-    *:focus {
-      outline: var(--bg);
-      box-shadow: 0 0 0 .25em var(--link);
-    }
-
+  
     /* Page navigation */
     section { 
       display: none; 
@@ -91,7 +31,7 @@
     article + article { 
       margin-top: 2rem; 
       padding-top: 2rem; 
-      border-top: 1px solid var(--bg-light); 
+      border-top: 1px solid var(--border); 
     }
     
     time { 
@@ -133,7 +73,7 @@
     <section id="home">
       <h2>about</h2>
       <p>I like to make things, but I don't usually share them so publicly. Hopefully I can learn to work on things out in the open.</p>
-      <p>I like dates written year-month-day with leading zeroes. Weeks start on Sunday. My spelling is all mixed up since I left the US, but I still mostly prefer American spelling when I notice it. I like em-dashes and I'm sad that I feel uncomfortable using them now because people think I'm using chatGPT to write.</p>
+      <p>I like dates written year-month-day with leading zeroes. Weeks start on Sunday. My spelling is all mixed up since I left the US, but I still mostly prefer American spelling when I notice it.</p>
       <p>This site is a home and a place for me to sort out my thoughts. It's my place online to relax and reflect on myself as a <a href="https://gravityfalls.fandom.com/wiki/We%27ll_Meet_Again">meat computer</a>. It's experimental and therapeutic, so don't take anything on here too seriously.</p>
       <p>There's no monetization, advertisements, trackers, paywalls, or public comments. But, if you've got anything to add to my brain, feel free to <a href="mailto:jsmolinelli@proton.me">contact me</a>.</p>
       <p>Just take off your shoes first before coming in.</p>
