remove underline form blog permalinks

--- a/blog.html
+++ b/blog.html
@@ -19,6 +19,10 @@ title: blog
     margin-bottom: 0.25rem;
   }
   
+  time a {
+    text-decoration: none;
+  }
+
   time a::after {
     content: ' ☍';
     margin-left: 0.5rem;
